Wed Jan 16 14:06:37 2008 - Andras Mantia <amantia@kde.org>
    o support executing of slots that don't have arguments
    o add "execute" method for PushButton
    o possibility to pass parameters for ScriptObject added

Wed Jan 9 21:35:38 2008 - Andras Mantia <amantia@kde.org>
    o add Table.selection to get back the selection coordinates

Sun Dec 30 00:02:34 2007 - Andras Mantia <amantia@kde.org>
    o don't do math operations in check only mode

Thu Dec 22 00:38:31 2007 - Andras Mantia <amantia@kde.org>
    o fix the for loop parsing if end < start

Thu Dec 20 00:38:31 2007 - Andras Mantia <amantia@kde.org>
    o insert the functions using the syntax of the new parser if #!kommander 
      is specified in the associated text 
    o add DatePicker widget

Sat Dec 15 23:58:45 2007 - Andras Mantia <amantia@kde.org>
    o return the result of a division in floating form if the result is not an integer.
      Changed the behavior in both the old and new parser.

Wed Nov 28 13:21:34 2007 - Andras Mantia <amantia@kde.org>
    o do not set array values when the assignment is in a code path which shouldn't be executed

Tue Nov 20 20:03:34 2007 - Andras Mantia <amantia@kde.org>
    o show the checked function for RadioButton widgets in the function browser

Fri Oct 19 16:08:32 2007 - Andras Mantia <amantia@kde.org>
	o make CheckBox.setChecked accept as argument false, "false", true, "true",
 	  0 (meaning false), everything else (meaning true)

Sat Oct 6 17:53:47 2007 - Andras Mantia <amantia@kde.org>
	o make multiplying work correctly for floating point values
	o do not remove the whole text after undoing the changes in the editor [#147817]
	o don't crash if opening a file the second time when the first try failed [#141110]
	o don't close the dialogs with ESC (just like in real applications)
	o fix ExecButton.setEnabled() [#113624]
	o use icon instead of "..." in the file selector [#109985]
	o make @echo really work [#138705]